--- a/maven-custom-web/pom.xml
+++ b/maven-custom-web/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>maven-custom-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
