--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,13 @@
       <artifactId>guava</artifactId>
       <version>30.0-jre</version>
     </dependency>
+
+    <!-- 表格 文件读取  -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>easyexcel</artifactId>
+      <version>2.2.7</version>
+    </dependency>
   </dependencies>
 
   <build>
